working on coding challenges page

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -45,7 +45,7 @@
         "title": "Welcome"
       },
       "more/book/chapter-00": {
-        "title": "Chapter 0"
+        "title": "more/book/chapter-00"
       },
       "more/book/chapter-01": {
         "title": "more/book/chapter-01"
@@ -194,7 +194,7 @@
     "Community|no description given": "Community",
     "Join the Conversation!|no description given": "Join the Conversation!",
     "The Substrate community is both technical and friendly, and we would be happy for you to join!|no description given": "The Substrate community is both technical and friendly, and we would be happy for you to join!",
-    "Course|no description given": "Course",
+    "A Course Of Course!|no description given": "A Course Of Course!",
     "Cryptoeconomics.Study is a fun and engaging course built to help you understand the basics of cryptoeconomic mechanism design.|no description given": "Cryptoeconomics.Study is a fun and engaging course built to help you understand the basics of cryptoeconomic mechanism design.",
     "Try It Out!|no description given": "Try It Out!",
     "Cryptoeconomics.Study has a rapidly growing, friendly, and engaged community. Ask questions and work together to solve coding challenges.|no description given": "Cryptoeconomics.Study has a rapidly growing, friendly, and engaged community. Ask questions and work together to solve coding challenges.",
@@ -214,10 +214,7 @@
     "We help you translate the knowledge you gain from the lectures and documentation into real live working code. These aren't just toy demo assignments either. You'll be using the same tooling and workflows that professional Ethereum Dapp developers and researchers use everyday.|no description given": "We help you translate the knowledge you gain from the lectures and documentation into real live working code. These aren't just toy demo assignments either. You'll be using the same tooling and workflows that professional Ethereum Dapp developers and researchers use everyday.",
     "Cryptoeconomics.Study Contributors|no description given": "Cryptoeconomics.Study Contributors",
     "More Cryptoeconomics.Study Contributors|no description given": "More Cryptoeconomics.Study Contributors",
-    "Runtime Recipes|no description given": "Runtime Recipes",
-    "Find code samples for common patterns and best practices when developing runtime modules on Substrate:|no description given": "Find code samples for common patterns and best practices when developing runtime modules on Substrate:",
-    "Substrate Runtime Recipes >|no description given": "Substrate Runtime Recipes >",
-    "Runtime Development|no description given": "Runtime Development",
+    "Chapter 1: Payment Processor|no description given": "Chapter 1: Payment Processor",
     "Substrate Collectables Workshop|no description given": "Substrate Collectables Workshop",
     "A comprehensive, end-to-end tutorial for creating a non-fungible token chain. Learn all the basics of Substrate runtime development here!|no description given": "A comprehensive, end-to-end tutorial for creating a non-fungible token chain. Learn all the basics of Substrate runtime development here!",
     "Creating Your First Substrate Chain|no description given": "Creating Your First Substrate Chain",
@@ -228,17 +225,14 @@
     "Make your runtime modules re-usable by packaging them in their own rust crate.|no description given": "Make your runtime modules re-usable by packaging them in their own rust crate.",
     "UTXO Workshop|no description given": "UTXO Workshop",
     "A tutorial teaching you how to build a UTXO chain like Bitcoin using Substrate.|no description given": "A tutorial teaching you how to build a UTXO chain like Bitcoin using Substrate.",
-    "Smart Contract Development|no description given": "Smart Contract Development",
-    "Substrate Contracts Workshop|no description given": "Substrate Contracts Workshop",
-    "A comprehensive, end-to-end tutorial for building an ERC20 token using Parity Substrate and ink!.|no description given": "A comprehensive, end-to-end tutorial for building an ERC20 token using Parity Substrate and ink!.",
-    "Deploying Your First Contract|no description given": "Deploying Your First Contract",
-    "A simple guide that helps you understand the process of deploying smart contracts on Substrate.|no description given": "A simple guide that helps you understand the process of deploying smart contracts on Substrate.",
-    "Writing Your First Contract|no description given": "Writing Your First Contract",
-    "A simple guide that helps you write your first 'flipper' contract.|no description given": "A simple guide that helps you write your first 'flipper' contract.",
-    "Running a Network|no description given": "Running a Network",
-    "Start a Private Network with Substrate|no description given": "Start a Private Network with Substrate",
-    "Learn to start a blockchain network with a validator/authority set of your choosing using Substrate.|no description given": "Learn to start a blockchain network with a validator/authority set of your choosing using Substrate.",
-    "Tutorial Catalog|no description given": "Tutorial Catalog",
+    "Chapter 2: Network Models|no description given": "Chapter 2: Network Models",
+    "TBD|no description given": "TBD",
+    "Something cool|no description given": "Something cool",
+    "Something cool.|no description given": "Something cool.",
+    "Chapter 3: Proof of Work|no description given": "Chapter 3: Proof of Work",
+    "Create a Proof of Work Blockchain simulation|no description given": "Create a Proof of Work Blockchain simulation",
+    "Learn to create a blockchain network that uses Proof of Work to validate blocks|no description given": "Learn to create a blockchain network that uses Proof of Work to validate blocks",
+    "Cryptoeconomics.Study Coding Challenges|no description given": "Cryptoeconomics.Study Coding Challenges",
     "Let's learn together!|no description given": "Let's learn together!",
     "We're shaping the future of positive-sum system development.|no description given": "We're shaping the future of positive-sum system development.",
     "Help Translate|recruit community translators for your project": "Help Translate",
