--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -215,16 +215,16 @@
     "Cryptoeconomics.Study Contributors|no description given": "Cryptoeconomics.Study Contributors",
     "More Cryptoeconomics.Study Contributors|no description given": "More Cryptoeconomics.Study Contributors",
     "Chapter 1: Payment Processor|no description given": "Chapter 1: Payment Processor",
-    "Substrate Collectables Workshop|no description given": "Substrate Collectables Workshop",
-    "A comprehensive, end-to-end tutorial for creating a non-fungible token chain. Learn all the basics of Substrate runtime development here!|no description given": "A comprehensive, end-to-end tutorial for creating a non-fungible token chain. Learn all the basics of Substrate runtime development here!",
-    "Creating Your First Substrate Chain|no description given": "Creating Your First Substrate Chain",
-    "A minimal, end-to-end guide to build and interact with your first custom Substrate chain.|no description given": "A minimal, end-to-end guide to build and interact with your first custom Substrate chain.",
-    "Substrate Token Curated Registry|no description given": "Substrate Token Curated Registry",
-    "Build a TCR module using Substrate.|no description given": "Build a TCR module using Substrate.",
-    "Write a Runtime Module in its Own Crate|no description given": "Write a Runtime Module in its Own Crate",
-    "Make your runtime modules re-usable by packaging them in their own rust crate.|no description given": "Make your runtime modules re-usable by packaging them in their own rust crate.",
-    "UTXO Workshop|no description given": "UTXO Workshop",
-    "A tutorial teaching you how to build a UTXO chain like Bitcoin using Substrate.|no description given": "A tutorial teaching you how to build a UTXO chain like Bitcoin using Substrate.",
+    "Ch1.1 Hashes and Signatures|no description given": "Ch1.1 Hashes and Signatures",
+    "Learn the magic of hash functions and how signatures work!|no description given": "Learn the magic of hash functions and how signatures work!",
+    "Ch1.2 Payment Processor|no description given": "Ch1.2 Payment Processor",
+    "Learn about beautiful state & state transitions, as well as how we use this design pattern to construct our simple payment processor!|no description given": "Learn about beautiful state & state transitions, as well as how we use this design pattern to construct our simple payment processor!",
+    "Ch1.3 Replay Protection|no description given": "Ch1.3 Replay Protection",
+    "Learn how signed messages can be used for unsavory ends! Replay protection is critical!|no description given": "Learn how signed messages can be used for unsavory ends! Replay protection is critical!",
+    "Ch1.4 Account Model vs UTXOs|no description given": "Ch1.4 Account Model vs UTXOs",
+    "Learn how to implement the UTXO model & why you might want to!|no description given": "Learn how to implement the UTXO model & why you might want to!",
+    "Ch1.5 Centralized Systems|no description given": "Ch1.5 Centralized Systems",
+    "We go over some common pitfalls of building systems which do not account for particularly nasty failure modes--system faults, monopoly pricing, censorship, & fraud. With cryptoeconomics we can make sure these bad things don't happen!|no description given": "We go over some common pitfalls of building systems which do not account for particularly nasty failure modes--system faults, monopoly pricing, censorship, & fraud. With cryptoeconomics we can make sure these bad things don't happen!",
     "Chapter 2: Network Models|no description given": "Chapter 2: Network Models",
     "TBD|no description given": "TBD",
     "Something cool|no description given": "Something cool",
