--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -5,6 +5,9 @@
     "previous": "Previous",
     "tagline": "Everything you Need to Learn The Fundamentals Of Cryptoeconomics",
     "docs": {
+      "ch1/ch1.1/coding-challenge": {
+        "title": "Coding Challenge"
+      },
       "ch1/ch1.1/lecture": {
         "title": "Lecture"
       },
@@ -109,9 +112,6 @@
       },
       "more/proof-of-work": {
         "title": "more/proof-of-work"
-      },
-      "sync/ch1.1-code-challenge": {
-        "title": "Code Challenge"
       },
       "sync/ch1.2-code-challenge": {
         "title": "Code Challenge"
