--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -26,6 +26,18 @@
       "ch1/index": {
         "title": "Overview"
       },
+      "ch2/ch2.1/lecture": {
+        "title": "ch2/ch2.1/lecture"
+      },
+      "ch2/ch2.2/lecture": {
+        "title": "ch2/ch2.2/lecture"
+      },
+      "ch2/ch2.3/lecture": {
+        "title": "ch2/ch2.3/lecture"
+      },
+      "ch2/ch2.4/lecture": {
+        "title": "ch2/ch2.4/lecture"
+      },
       "ch2/index": {
         "title": "Ch2"
       },
