basic ch2.1 lecture draft

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -27,19 +27,22 @@
         "title": "Overview"
       },
       "ch2/ch2.1/lecture": {
-        "title": "ch2/ch2.1/lecture"
+        "title": "Lecture"
       },
       "ch2/ch2.2/lecture": {
-        "title": "ch2/ch2.2/lecture"
+        "title": "Lecture"
       },
       "ch2/ch2.3/lecture": {
-        "title": "ch2/ch2.3/lecture"
+        "title": "Lecture"
       },
       "ch2/ch2.4/lecture": {
-        "title": "ch2/ch2.4/lecture"
+        "title": "Lecture"
       },
       "ch2/index": {
-        "title": "Ch2"
+        "title": "Overview"
+      },
+      "ch3/ch3.1/lecture": {
+        "title": "Lecture"
       },
       "ch3/index": {
         "title": "Ch3"
