setup framework for ch2 sync scripts and sidebar

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -140,6 +140,18 @@
       "sync/ch1.5-code-challenge": {
         "title": "Code Challenge"
       },
+      "sync/ch2.1-code-challenge": {
+        "title": "Code Challenge"
+      },
+      "sync/ch2.2-code-challenge": {
+        "title": "Code Challenge"
+      },
+      "sync/ch2.3-code-challenge": {
+        "title": "Code Challenge"
+      },
+      "sync/ch2.4-code-challenge": {
+        "title": "Code Challenge"
+      },
       "sync/dev-env-setup": {
         "title": "Dev Env Setup"
       },
@@ -192,7 +204,7 @@
       "Getting Started": "Getting Started",
       "Chapter 0": "Chapter 0",
       "Ch1: Payment Processor": "Ch1: Payment Processor",
-      "Ch2 Network Models": "Ch2 Network Models",
+      "Ch2: Network Models": "Ch2: Network Models",
       "Ch3 Proof of Work": "Ch3 Proof of Work",
       "More": "More"
     }
