--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -128,6 +128,9 @@
       "more/proof-of-work": {
         "title": "more/proof-of-work"
       },
+      "sync/ch1.1-code-challenge": {
+        "title": "Code Challenge"
+      },
       "sync/ch1.2-code-challenge": {
         "title": "Code Challenge"
       },
