--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -125,6 +125,9 @@
       "more/intro-to-gametheory": {
         "title": "more/intro-to-gametheory"
       },
+      "more/learning-resources": {
+        "title": "more/learning-resources"
+      },
       "more/proof-of-work": {
         "title": "more/proof-of-work"
       },
