--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -44,8 +44,20 @@
       "ch3/3.1/lecture": {
         "title": "Lecture"
       },
+      "ch3/3.2/lecture": {
+        "title": "Lecture"
+      },
+      "ch3/3.3/lecture": {
+        "title": "Lecture"
+      },
+      "ch3/3.4/lecture": {
+        "title": "Lecture"
+      },
+      "ch3/3.5/lecture": {
+        "title": "Lecture"
+      },
       "ch3/index": {
-        "title": "Ch3"
+        "title": "Overview"
       },
       "contribute/contributing": {
         "title": "Contributing"
