changed syllabus to course overview

--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -156,7 +156,7 @@
         "title": "more/proof-of-work"
       },
       "more/resources": {
-        "title": "Glossary"
+        "title": "Resources"
       },
       "sync/1.1-code-challenge": {
         "title": "Code Challenge"
