--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -191,17 +191,74 @@
       "sync/2.1-code-challenge": {
         "title": "Code Challenge"
       },
+      "sync/2.1-lecture": {
+        "title": "Lecture"
+      },
       "sync/2.2-code-challenge": {
         "title": "Code Challenge"
+      },
+      "sync/2.2-lecture": {
+        "title": "Lecture"
       },
       "sync/2.3-code-challenge": {
         "title": "Code Challenge"
       },
+      "sync/2.3-lecture": {
+        "title": "Lecture"
+      },
       "sync/2.4-code-challenge": {
         "title": "Code Challenge"
       },
-      "sync/development-setup": {
+      "sync/2.4-lecture": {
+        "title": "Lecture"
+      },
+      "sync/3.1-code-challenge": {
+        "title": "Code Challenge"
+      },
+      "sync/3.1-lecture": {
+        "title": "Lecture"
+      },
+      "sync/3.2-code-challenge": {
+        "title": "Code Challenge"
+      },
+      "sync/3.2-lecture": {
+        "title": "Lecture"
+      },
+      "sync/3.3-lecture": {
+        "title": "Lecture"
+      },
+      "sync/3.4-lecture": {
+        "title": "Lecture"
+      },
+      "sync/3.5-lecture": {
+        "title": "Lecture"
+      },
+      "sync/dao-advisors": {
+        "title": "Advisers 🧙"
+      },
+      "sync/dao-carrots": {
+        "title": "Carrots 🥕"
+      },
+      "sync/dao-code-of-conduct": {
+        "title": "Code of Conduct ❤️"
+      },
+      "sync/dao-gerbils": {
+        "title": "Gerbils 🐹"
+      },
+      "sync/dao-help-wanted": {
+        "title": "Help Wanted 🙌"
+      },
+      "sync/dao-welcome": {
+        "title": "Welcome"
+      },
+      "sync/getting-started-course-overview": {
+        "title": "Course Overview"
+      },
+      "sync/getting-started-development-setup": {
         "title": "Development Setup"
+      },
+      "sync/getting-started-welcome": {
+        "title": "Welcome"
       }
     },
     "links": {
