--- a/website/i18n/en.json
+++ b/website/i18n/en.json
@@ -158,11 +158,20 @@
       "sync/3.2-lecture": {
         "title": "Lecture"
       },
+      "sync/3.3-code-challenge": {
+        "title": "Code Challenge"
+      },
       "sync/3.3-lecture": {
         "title": "Lecture"
       },
+      "sync/3.4-code-challenge": {
+        "title": "Code Challenge"
+      },
       "sync/3.4-lecture": {
         "title": "Lecture"
+      },
+      "sync/3.5-code-challenge": {
+        "title": "Code Challenge"
       },
       "sync/3.5-lecture": {
         "title": "Lecture"
