--- a/docs/sync/3.1-lecture.md
+++ b/docs/sync/3.1-lecture.md
@@ -15,7 +15,7 @@ hide_title: false
 <iframe
 	width="560"
 	height="315"
-	src="https://youtu.be/dZp4fH0McIg"
+	src="https://www.youtube.com/embed/dZp4fH0McIg"
 	frameborder="0"
 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 	allowfullscreen>
@@ -26,9 +26,9 @@ hide_title: false
 # Slides
 
 Google Sheets
-[Part 1](https://docs.google.com/presentation/d/1KM9FExtcdvWWeQNW6SjpHswmrU1CsH1bRM9qslOYUyQ/edit#slide=id.g4023786b63_0_0)
-[Part 2](https://docs.google.com/presentation/d/100f7u_DKz8mDdChzYLx3C2ALxs0_oyDp-07pppDuC-k/edit#slide=id.g56028c6a63_0_3311)
-[Part 3](https://docs.google.com/presentation/d/18qFsBmOBlRziCIjRAJQIVlY0KM2DvhlX3vQtkWlnl5I/edit#slide=id.g5609d5c0b9_2_3522)
+- [Part 1](https://docs.google.com/presentation/d/1KM9FExtcdvWWeQNW6SjpHswmrU1CsH1bRM9qslOYUyQ/edit#slide=id.g4023786b63_0_0)
+- [Part 2](https://docs.google.com/presentation/d/100f7u_DKz8mDdChzYLx3C2ALxs0_oyDp-07pppDuC-k/edit#slide=id.g56028c6a63_0_3311)
+- [Part 3](https://docs.google.com/presentation/d/18qFsBmOBlRziCIjRAJQIVlY0KM2DvhlX3vQtkWlnl5I/edit#slide=id.g5609d5c0b9_2_3522)
 
 <br />
 
