--- a/docs/sync/3.2-lecture.md
+++ b/docs/sync/3.2-lecture.md
@@ -15,7 +15,7 @@ hide_title: false
 <iframe
 	width="560"
 	height="315"
-	src="https://youtu.be/P8oudyBm5UI"
+	src="https://www.youtube.com/embed/P8oudyBm5UI"
 	frameborder="0"
 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 	allowfullscreen>
@@ -26,8 +26,8 @@ hide_title: false
 # Slides
 
 Google Sheets
-[Part 1](https://docs.google.com/presentation/d/1WDOs1wBugeRmQ2hvZH7SICEqCk2Ci9doA-7yFHKkXNg/edit)
-[Part 2](https://docs.google.com/presentation/d/1hOo7Rt2jizAqd_08VPaTpgtCs7Je80sf9MQbB5dLosM/edit#slide=id.g578c7d3252_1_1947)
+- [Part 1](https://docs.google.com/presentation/d/1WDOs1wBugeRmQ2hvZH7SICEqCk2Ci9doA-7yFHKkXNg/edit)
+- [Part 2](https://docs.google.com/presentation/d/1hOo7Rt2jizAqd_08VPaTpgtCs7Je80sf9MQbB5dLosM/edit#slide=id.g578c7d3252_1_1947)
 
 <br />
 
