--- a/docs/sync/3.3-lecture.md
+++ b/docs/sync/3.3-lecture.md
@@ -15,7 +15,7 @@ hide_title: false
 <iframe
 	width="560"
 	height="315"
-	src="https://youtu.be/n7DrsWDkKP4"
+	src="https://www.youtube.com/embed/n7DrsWDkKP4"
 	frameborder="0"
 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 	allowfullscreen>
