--- a/docs/sync/3.4-lecture.md
+++ b/docs/sync/3.4-lecture.md
@@ -15,7 +15,7 @@ Game Theory in Bitcoin
 <iframe
 	width="560"
 	height="315"
-	src="https://youtu.be/IT0HIsf7ilY"
+	src="https://www.youtube.com/embed/IT0HIsf7ilY"
 	frameborder="0"
 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 	allowfullscreen>
