--- a/docs/sync/3.5-lecture.md
+++ b/docs/sync/3.5-lecture.md
@@ -15,7 +15,7 @@ Selfish Mining
 <iframe
 	width="560"
 	height="315"
-	src="https://youtu.be/ulb9XVs-7Pk"
+	src="https://www.youtube.com/embed/ulb9XVs-7Pk"
 	frameborder="0"
 	allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
 	allowfullscreen>
