--- a/docs/sync/3.4-code-challenge.md
+++ b/docs/sync/3.4-code-challenge.md
@@ -11,6 +11,10 @@ hide_title: false
 
 <br />
 
+# Section Title
+
+<br />
+
 ## Thing 1
 
 Blah Blah Blah
@@ -26,6 +30,12 @@ Blah Blah Blah
 ```
 // code
 ```
+
+<br />
+
+## Testing
+
+Blah Blah Blah
 
 <br />
 
