beta post updated

--- a/website/blog/2019-09-18-beta.md
+++ b/website/blog/2019-09-18-beta.md
@@ -1,11 +1,11 @@
 ---
 title: Cryptoeconomics.Study Beta Is Live! 🐹
 author: Kevin Ho
-authorURL: http://kevinjho.co
+authorURL: https://twitter.com/kevinjho_
 authorTwitter: kevinjho_
 ---
 Announcing the all-new [Cryptoeconomics.Study](https://cryptoeconomics.study/) online course, complete with animated lectures & challenging coding assignments. Students learn the inner workings of blockchain protocols through doing. Learn how to build and attack consensus systems, analyze the tradeoffs between different protocol designs, and more: [Course syllabus](https://cryptoeconomics.study/docs/en/sync/getting-started-course-overview). 
 
-Apply for access to our closed beta! Our beta is completely free and will be capped at 150 users who will have access to an invite-only Discord group with course support from mentors. You’ll also be guaranteed an official certificate of completion.  The course requires basic programming experience and familiarity with Javascript. We expect it to take between 30 and 50 hours to complete. Apply [here](https://forms.gle/SC49hXM6oBCcLFDMA). 
+Apply for access to our closed beta! Our beta is completely free and will be capped at 100 users who will have access to an invite-only Discord group with course support from mentors. You’ll also be guaranteed an official certificate of completion.  The course requires basic programming experience and familiarity with Javascript. We expect it to take between 30 and 50 hours to complete. Apply [here](https://forms.gle/SC49hXM6oBCcLFDMA). 
 
-P.S. If you want to support our effort, please [donate](https://gitcoin.co/grants/16/cryptoeconomicsstudy-free-open-source-blockchain-2) to our Gitcoin campaign. All funds donated until 9/31 are being [matched](https://gitcoin.co/blog/gitcoins-q3-match-100k-to-oss-projects/) by the Ethereum Foundation, so even small donations of 10 DAI make a big impact!
+P.S. This course is a labor of love predominantly built by volunteers. It has been no small feat - please consider [donating](https://gitcoin.co/grants/16/cryptoeconomicsstudy-free-open-source-blockchain-2) to our Gitcoin grant ([video tutorial](https://youtu.be/8ArwotlDdYQ)). Let us know in your beta tester application if you are a donor! All funds donated until 9/31 are being [matched](https://gitcoin.co/blog/gitcoins-q3-match-100k-to-oss-projects/) by the Ethereum Foundation, so even small donations of 5-10 DAI make a big impact!
